<resources>
    <string name="app_name">StudentQR</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_reg_number">Reg Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email_text">"Please Enter student email"</string>
    <string name="enter_email">"Enter Student Email"</string>
    <string name="code">"Enter Code"</string>
    <string name="submit_email">"Submit"</string>
    <string name="new_pwd">"Enter New Password"</string>
    <string name="new_psw_confirm">"Confirm Password"</string>
    <string name="Change">"Change Password"</string>
</resources>
