<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".ForgotPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:text="Students \nClass  \nAttendace"/>

                <ImageView
                    android:id="@+id/designimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_register_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <TextView
                android:id="@+id/instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                style="@style/viewParent.headerText.NoMode"
                android:text="@string/enter_email_text"
                android:visibility="visible">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:visibility="visible"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/edittext_email"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/enter_email"
                    android:visibility="visible"/>
            </com.google.android.material.textfield.TextInputLayout>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/submit_btn"
                style="@style/loginButton"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                android:text="@string/submit_email"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:spinning_bar_padding="6dp"
                app:initialCornerAngle="27dp"
                android:visibility="visible"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCode"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/edittext_code"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:hint="@string/code"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputnewpasswor"
                style="@style/parent"
                android:visibility="gone"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/edittext_new_password"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:hint="@string/new_pwd"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputConfirmPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/edittext_confirm_password"
                    style="@style/modifiedEditText"
                    android:hint="@string/new_psw_confirm"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>



            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/change_btn"
                style="@style/loginButton"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                android:text="@string/Change"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:spinning_bar_padding="6dp"
                android:visibility="gone"
                app:initialCornerAngle="27dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="3"/>

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="School System"
                    android:layout_weight="6"
                    android:textSize="12sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="3"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_img"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        />

</RelativeLayout>